--- a/Climate Change Webpage/Advice.html
+++ b/Climate Change Webpage/Advice.html
@@ -101,7 +101,6 @@
 				text-align: center;
 				font-size: 10px;
 			}
-
 		</style>
 	</head>
 	<body>
@@ -125,35 +124,23 @@
 		  
 		<div id = "right">
 			<div id = "padding">
-				<h4>What is it Doing?</h4>
-				<p>Sea levels are rising and oceans are becoming warmer. Longer, more intense droughts threaten crops, wildlife and freshwater supplies. From polar bears in the Arctic to marine turtles off the coast of Africa, our planet’s diversity of life is at risk from the changing climate.</p>
-				<p>Glaciers have shrunk, ice on rivers and lakes is breaking up earlier, plant and animal ranges have shifted and trees are flowering sooner</p>
-				<h4>Future Effects</h4>
-				<ul>
-					<li>Change will continue through this century and beyond</li>
-					<li>Temperatures will continue to rise</li>
-					<li>Frost-free season (and growing season) will lengthen</li>
-					<li>Changes in precipitation patterns</li>
-					<li>More droughts and heat waves</li>
-					<li>Hurricanes will become stronger and more intense</li>
-					<li>Sea level will rise 1-4 feet by 2100</li>
-					<li>Arctic likely to become ice-free</li>
-				</ul>
+				<h4>What Can I Do?</h4>
+				<p>Nobody can change the world alone. However, your action could make others act upon themselves. You can't just put up posters any more. Nobody looks at those.</p>
+				<p>One way you can contribute is a simple way, yet so many people do not do it: Do not throw your rubbish on the ground. Put it in a bin. If a bin is full, put it in another bin. If no other bins are available, take it home and put it in your own bin. Simple as that.</p>
+				<p>Second way: Pick up after your dog. Carry around small plastic bags. If your dog does a dump, turn the bag inside out, put your hand inside, pick up the poo and pull the bag over your hand. Your hand doesn't get messy and all that's left is to PUT IT IN THE BIN.</p>
+				<p>Third way: Point out others' actions. Not random people because they will probably think you've been smoking something. Tell your friends if they litter to pick it up and put it in a bin. If they refuse, <i>you</i> do it. <strike>Also, cut that friend out of your life forever.</strike></p>
+				<p>Fourth way: Spend less time in the shower. The water is heated up by a boiler, the boiler uses electricity and if your using steam power, that's a big no no. Set a time limit, like maybe an alarm(Make sure you don't get surprised too much or you could slip and bang your head).</p>
 			</div>
 		</div>
 		<img class = "effects" src = "stony.jpg">
-		<img class = "effects2" src = "cc flooded houses.jpg">
-		<img class = "effects3" src = "cc cows.jpg">
-		<img class = "effects4" src = "cc polar bear.jpg">
 		<div id = "left">
 			<div id = "padding">
-				<h4>What is Climate Change?</h4>
+				<h4>What Can Your Community Do?</h4>
 				<p>A change in global or regional climate patterns, in particular a change apparent from the mid to late 20th century onwards and attributed largely to the increased levels of atmospheric carbon dioxide produced by the use of fossil fuels.</p>
 				<p><br>That's the basic definition. But what <i>is</i> it and why should we fear it?</p>
 				<p><br>The planet's climate has constantly been changing over geological time. The global average temperature today is about 15C, though geological evidence suggests it has been much higher and lower in the past.<br>However, the current period of warming is occurring more rapidly than many past events. Scientists are concerned that the natural fluctuation, or variability, is being overtaken by a rapid human-induced warming that has serious implications for the stability of the planet's climate.<br><br><br><br></p>
 			</div>
 		</div>
-		
 		<div class="footer">
 			<p>Posted by: Pádraig Whyte and James Joyce</p>
 			<p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
