--- a/Climate Change Webpage/Advice.html
+++ b/Climate Change Webpage/Advice.html
@@ -77,6 +77,10 @@
 				width: 34%;
 				height: 200px;
 				border-style: groove;
+				transition: all .2s ease-in-out;
+			}
+			.effects:hover { 
+				transform: scale(1.1); 
 			}
 			.effects2 {
 				position: absolute;
@@ -85,6 +89,10 @@
 				width: 34%;
 				height: 200px;
 				border-style: groove;
+				transition: all .2s ease-in-out;
+			}
+			.effects2:hover { 
+				transform: scale(1.1); 
 			}
 			.effects3 {
 				position: absolute;
@@ -93,6 +101,10 @@
 				width: 34%;
 				height: 200px;
 				border-style: groove;
+				transition: all .2s ease-in-out;
+			}
+			.effects3:hover { 
+				transform: scale(1.1); 
 			}
 			.effects4 {
 				position: absolute;
@@ -101,6 +113,10 @@
 				width: 34%;
 				height: 200px;
 				border-style: groove;
+				transition: all .2s ease-in-out;
+			}
+			.effects4:hover { 
+				transform: scale(1.1); 
 			}
 			.footer {
 				height: 87px;
@@ -147,6 +163,9 @@
 				</div>
 			</div>
 			<img class = "effects" src = "stony.jpg">
+			<img class = "effects2" src = "stony.jpg">
+			<img class = "effects3" src = "stony.jpg">
+			<img class = "effects4" src = "stony.jpg">
 			<div id = "left">
 				<div id = "padding">
 					<h4>What Can Your Community Do?</h4>
