--- a/Climate Change Webpage/People.html
+++ b/Climate Change Webpage/People.html
@@ -129,6 +129,7 @@
 			}
 			.name:hover {
 				font-weight: bold;
+				text-decoration: underline;
 			}
 			.name2 {
 				position: absolute;
@@ -141,6 +142,7 @@
 			}
 			.name2:hover {
 				font-weight: bold;
+				text-decoration: underline;
 			}
 			.name3 {
 				position: absolute;
@@ -153,6 +155,7 @@
 			}
 			.name3:hover {
 				font-weight: bold;
+				text-decoration: underline;
 			}
 			.name4 {
 				position: absolute;
@@ -165,6 +168,7 @@
 			}
 			.name4:hover {
 				font-weight: bold;
+				text-decoration: underline;
 			}
 			.footer {
 				height: 87px;
@@ -212,19 +216,19 @@
 			</div>
 			<div class = "People">
 				<img class = "effects" src = "Arnold.jpg">
-				<h6 class = "name">Arnold Schwarzenegger</h6>
+				<a href = "https://www.youtube.com/watch?v=NpJIfOLxFik" target = "_blank"><h6 class = "name">Arnold Schwarzenegger</h6></a>
 			</div>
 			<div class = "People">
 				<img class = "effects2" src = "Leo.jpg">
-				<h6 class = "name2">Leonardo DiCaprio</h6>
+				<a href = "https://www.youtube.com/watch?v=qkZ13cVUbJs" target = "_blank"><h6 class = "name2">Leonardo DiCaprio</h6></a>
 			</div>
 			<div class = "People">
 				<img class = "effects3" src = "Brad.jpg">
-				<h6 class = "name3">Brad Pitt</h6>
+				<a href = "https://www.youtube.com/watch?v=7ijf5fWo6kY" target = "_blank"><h6 class = "name3">Brad Pitt</h6></a>
 			</div>
 			<div class = "People">
 				<img class = "effects4" src = "Mark.jpg">
-				<h6 class = "name4">Mark Ruffalo</h6>
+				<a href = "https://www.youtube.com/watch?v=gEdflBt67Ik" target = "_blank"><h6 class = "name4">Mark Ruffalo</h6></a>
 			</div>
 			<div id = "left">
 				<div id = "padding">
