--- a/Climate Change Webpage/People.html
+++ b/Climate Change Webpage/People.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<style>
 			html {
-				height: 200%;
+				height: 330%;
 				margin: 0px;
 				padding: 0px;
 			}
@@ -75,7 +75,7 @@
 				position: absolute;
 				left: 33%;
 				width: 34%;
-				height: 200px;
+				height: auto;
 				border-style: groove;
 				transition: all .2s ease-in-out;
 			}
@@ -84,10 +84,10 @@
 			}
 			.effects2 {
 				position: absolute;
-				top: 800px;
+				top: 1150px;
 				left: 33%;
 				width: 34%;
-				height: 200px;
+				height: auto;
 				border-style: groove;
 				transition: all .2s ease-in-out;
 			}
@@ -96,10 +96,10 @@
 			}
 			.effects3 {
 				position: absolute;
-				top: 1020px;
+				top: 1670px;
 				left: 33%;
 				width: 34%;
-				height: 200px;
+				height: auto;
 				border-style: groove;
 				transition: all .2s ease-in-out;
 			}
@@ -108,10 +108,10 @@
 			}
 			.effects4 {
 				position: absolute;
-				top: 1240px;
+				top: 2290px;
 				left: 33%;
 				width: 34%;
-				height: 200px;
+				height: auto;
 				border-style: groove;
 				transition: all .2s ease-in-out;
 			}
@@ -133,7 +133,7 @@
 			}
 			.name2 {
 				position: absolute;
-				top: 990px;
+				top: 1390px;
 				left: 29%;
 				width: 34%;
 				font-size: 12px;
@@ -146,7 +146,7 @@
 			}
 			.name3 {
 				position: absolute;
-				top: 1160px;
+				top: 1880px;
 				left: 71%;
 				width: 34%;
 				font-size: 12px;
@@ -159,7 +159,7 @@
 			}
 			.name4 {
 				position: absolute;
-				top: 1430px;
+				top: 2540px;
 				left: 29%;
 				width: 34%;
 				font-size: 12px;
@@ -208,8 +208,7 @@
 			<div id = "right">
 				<div id = "padding">
 					<h4>Arnold Schwarzenegger</h4>
-					<p>Arnold Schwarzenegger has been working to protect the environment since April 20, 2004.</p>
-					<p>Glaciers have shrunk, ice on rivers and lakes is breaking up earlier, plant and animal ranges have shifted and trees are flowering sooner</p>
+					<p>Arnold Schwarzenegger has been working to protect the environment since April 20, 2004. In <b>April 20, 2004</b> Arnold signed Executive Order S-7-04, creating a public-private partnership to build a Hydrogen Highway in California. With the goals of cleaner air, greater independence from foreign oil, and lower fuel prices, this initiative resulted in the development of more than 50 operational hydrogen fueling stations throughout the state. In <b>July 2004</b> The Governor issued Executive Order S-12-05, requiring all state agencies to reduce energy use during the peak summer season, and encouraged businesses and consumers to do the same. The Governor’s order committed state government to “reduce grid-based energy purchases for state-owned buildings by 20% by 2015, through cost-effective efficiency measures and distributed generation technologies.” As of July 2010, 20 new state buildings over 10,000 square feet had received LEED certification, and 239 buildings were pursuing LEED certification. In addition, 22 existing buildings over 50,000 square feet had been LEED certified, and the Department of General Services had received approval for a volume certification program.<br>Overall, as a result of the Governor’s leadership on energy efficiency, the average Californian uses only 6,700 kilowatt hours of electricity per year—compared to the average American, who uses 12,000. California’s “electricity bill,” as a fraction of its economy, is the fifth lowest in the country.<br><a href = "http://www.schwarzenegger.com/issues/milestone/protecting-the-environment-and-promoting-clean-energy" target = "_blank">More of Arnie's feats here.</a></p>
 					<h4>Brad Pitt</h4>
 					<p></p>
 				</div>
