--- a/Climate Change Webpage/Advice.html
+++ b/Climate Change Webpage/Advice.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<style>
 			html {
-				height: 225%;
+				height: 261%;
 				margin: 0px;
 				padding: 0px;
 			}
@@ -49,11 +49,9 @@
 			  overflow: hidden;
 			  background-color: #333;
 			}
-
 			#nav li {
 			  float: left;
 			}
-
 			#nav li a {
 			  display: block;
 			  color: white;
@@ -61,7 +59,6 @@
 			  padding: 14px 16px;
 			  text-decoration: none;
 			}
-
 			#nav li a:hover {
 			  background-color: #111;
 			}
@@ -75,45 +72,41 @@
 				position: absolute;
 				left: 33%;
 				width: 34%;
-				height: 200px;
+				height: auto;
 				border-style: groove;
-				transition: all .2s ease-in-out;
 			}
 			.effects:hover { 
 				transform: scale(1.1); 
 			}
 			.effects2 {
 				position: absolute;
-				top: 800px;
+				top: 1000px;
 				left: 33%;
 				width: 34%;
-				height: 200px;
+				height: auto;
 				border-style: groove;
-				transition: all .2s ease-in-out;
 			}
 			.effects2:hover { 
 				transform: scale(1.1); 
 			}
 			.effects3 {
 				position: absolute;
-				top: 1020px;
+				top: 1420px;
 				left: 33%;
 				width: 34%;
-				height: 200px;
+				height: auto;
 				border-style: groove;
-				transition: all .2s ease-in-out;
 			}
 			.effects3:hover { 
 				transform: scale(1.1); 
 			}
 			.effects4 {
 				position: absolute;
-				top: 1240px;
+				top: 1740px;
 				left: 33%;
 				width: 34%;
 				height: 200px;
 				border-style: groove;
-				transition: all .2s ease-in-out;
 			}
 			.effects4:hover { 
 				transform: scale(1.1); 
@@ -145,9 +138,9 @@
 			<!--<div id = "x" style = "width: 100%; height : 100%;"></div>-->
 			 <div id = "slider">
 				<div class="w3-content w3-section" style="max-width:100%;">
-					<a href="#"><img class="mySlides" src="Global.jpg" style="width:100%; height: 500px;"></a>
-					<a href="#"><img class="mySlides" src="Global.gif" style="width:100%; height: 500px;"></a>
-					<a href="#"><img class="mySlides" src="Warming.jpg" style="width:100%; height: 500px;"></a>
+					<a href="#"><img class="mySlides" src="sooperdooperpooperscooper.jpg" style="width:100%; height: 500px;"></a>
+					<a href="#"><img class="mySlides" src="nolitter.jpg" style="width:100%; height: 500px;"></a>
+					<a href="#"><img class="mySlides" src="ppp.jpg" style="width:100%; height: 500px;"></a>
 				</div>
 			</div>
 			  
@@ -157,21 +150,20 @@
 					<p>Nobody can change the world alone. However, your action could make others act upon themselves. You can't just put up posters any more. Nobody looks at those.</p>
 					<p>One way you can contribute is a simple way, yet so many people do not do it: Do not throw your rubbish on the ground. Put it in a bin. If a bin is full, put it in another bin. If no other bins are available, take it home and put it in your own bin. Simple as that.</p>
 					<p>Second way: Pick up after your dog. Carry around small plastic bags. If your dog does a dump, turn the bag inside out, put your hand inside, pick up the poo and pull the bag over your hand. Your hand doesn't get messy and all that's left is to PUT IT IN THE BIN.</p>
-					<p>Third way: Point out others' actions. Not random people because they will probably think you've been smoking something. Tell your friends if they litter to pick it up and put it in a bin. If they refuse, <i>you</i> do it. <strike>Also, cut that friend out of your life forever.</strike></p>
-					<p>Fourth way: Spend less time in the shower. The water is heated up by a boiler, the boiler uses electricity and if your using steam power, that's a big no no. Set a time limit, like maybe an alarm(Make sure you don't get surprised too much or you could slip and bang your head).</p>
-					<p>Fifth way: </p>
+					<p>Third way: Point out others' actions. Not random people because then you will look like a crazy tree-hugging hippie. Tell your friends if they litter to pick it up and put it in a bin. If they refuse, <i>you</i> do it. <strike>Also, cut that friend out of your life forever.</strike></p>
+					<p>Fourth way: Turn off devices at the plug. Even when the switch is on, it is using electricity. How is this electricity made, you ask? Burning FOSSIL FUELS. So, seriously, stop doing that.</p>
+					
 				</div>
 			</div>
-			<img class = "effects" src = "stony.jpg">
-			<img class = "effects2" src = "stony.jpg">
-			<img class = "effects3" src = "stony.jpg">
-			<img class = "effects4" src = "stony.jpg">
+			<img class = "effects" src = "icecream.jpg">
+			<img class = "effects2" src = "advicepic.png">
+			<img class = "effects3" src = "warm.jpg">
 			<div id = "left">
 				<div id = "padding">
 					<h4>What Can Your Community Do?</h4>
-					<p>A change in global or regional climate patterns, in particular a change apparent from the mid to late 20th century onwards and attributed largely to the increased levels of atmospheric carbon dioxide produced by the use of fossil fuels.</p>
-					<p><br>That's the basic definition. But what <i>is</i> it and why should we fear it?</p>
-					<p><br>The planet's climate has constantly been changing over geological time. The global average temperature today is about 15C, though geological evidence suggests it has been much higher and lower in the past.<br>However, the current period of warming is occurring more rapidly than many past events. Scientists are concerned that the natural fluctuation, or variability, is being overtaken by a rapid human-induced warming that has serious implications for the stability of the planet's climate.<br><br><br><br></p>
+					<p>You can organize a public march, peacefully presenting your opinions on climate change. It will be a fun thing to do, and, hey, it might even benefit the planet!</p>
+					<p><br>Your community can participate, if it has not already, in the Tidy Towns competition. This is a national competition, where your town can win prizes for keeping it clean and pretty. This is a fantastic way to help stop Global Warming, because you can get your whole community involved in a fun activity that results in a cleaner and better town, as well as a chance for top prize! There are over 200 prizes that can be awarded, and the prize fund is €250,000!!! That could buy you a swimming pool-full of chocolate bars!!!</p>
+					<p><br><br><br>Encourage the three R's in school: Reduce, Reuse, Recycle! Positive enforcement of this simple rule can result in a significantly change for the better. This is because when factories manufacture a tin can, for example. It uses a lot of energy to smelt the iron down into the specific shape they want. However, if they recycle the cans they have made, it uses a lot less energy to manufacture the tin cans with that same high quality.<br><br><br></p>
 				</div>
 			</div>
 			<div class="footer">
@@ -226,7 +218,6 @@
 	  // Pass the function sketchProc (defined in myCode.js) to Processing's constructor.
 		
 	var processingInstance = new Processing(canvas, sketchProc); */
-
  </script>
 
 
