--- a/Climate Change Webpage/Advice.html
+++ b/Climate Change Webpage/Advice.html
@@ -151,7 +151,7 @@
 					<p>One way you can contribute is a simple way, yet so many people do not do it: Do not throw your rubbish on the ground. Put it in a bin. If a bin is full, put it in another bin. If no other bins are available, take it home and put it in your own bin. Simple as that.</p>
 					<p>Second way: Pick up after your dog. Carry around small plastic bags. If your dog does a dump, turn the bag inside out, put your hand inside, pick up the poo and pull the bag over your hand. Your hand doesn't get messy and all that's left is to PUT IT IN THE BIN.</p>
 					<p>Third way: Point out others' actions. Not random people because then you will look like a crazy tree-hugging hippie. Tell your friends if they litter to pick it up and put it in a bin. If they refuse, <i>you</i> do it. <strike>Also, cut that friend out of your life forever.</strike></p>
-					<p>Fourth way: Turn off devices at the plug. Even when the switch is on, it is using electricity. How is this electricity made, you ask? Burning FOSSIL FUELS. So, seriously, stop doing that.</p>
+					<p>Fourth way: Turn off devices at the plug. Even when the switch is on, it is using electricity. How is this electricity made, you ask? Burning FOSSIL FUELS. So, seriously, stop doing that.<br><br><br><br><br><br></p>
 					
 				</div>
 			</div>
