--- a/Climate Change Webpage/People.html
+++ b/Climate Change Webpage/People.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<style>
 			html {
-				height: 330%;
+				height: 390%;
 				margin: 0px;
 				padding: 0px;
 			}
@@ -28,13 +28,13 @@
 			#right {
 				float: right;
 				border-style: solid;
-				width: 230px;
+				width: 224px;
 				margin-bottom: 50px;
 			}
 			#left {
 				float: left;
 				border-style: solid;
-				width: 230px;
+				width: 224px;
 				margin-bottom: 50px;
 			}
 			#nav #Title {
@@ -210,7 +210,10 @@
 					<h4>Arnold Schwarzenegger</h4>
 					<p>Arnold Schwarzenegger has been working to protect the environment since April 20, 2004. In <b>April 20, 2004</b> Arnold signed Executive Order S-7-04, creating a public-private partnership to build a Hydrogen Highway in California. With the goals of cleaner air, greater independence from foreign oil, and lower fuel prices, this initiative resulted in the development of more than 50 operational hydrogen fueling stations throughout the state. In <b>July 2004</b> The Governor issued Executive Order S-12-05, requiring all state agencies to reduce energy use during the peak summer season, and encouraged businesses and consumers to do the same. The Governor’s order committed state government to “reduce grid-based energy purchases for state-owned buildings by 20% by 2015, through cost-effective efficiency measures and distributed generation technologies.” As of July 2010, 20 new state buildings over 10,000 square feet had received LEED certification, and 239 buildings were pursuing LEED certification. In addition, 22 existing buildings over 50,000 square feet had been LEED certified, and the Department of General Services had received approval for a volume certification program.<br>Overall, as a result of the Governor’s leadership on energy efficiency, the average Californian uses only 6,700 kilowatt hours of electricity per year—compared to the average American, who uses 12,000. California’s “electricity bill,” as a fraction of its economy, is the fifth lowest in the country.<br><a href = "http://www.schwarzenegger.com/issues/milestone/protecting-the-environment-and-promoting-clean-energy" target = "_blank">More of Arnie's feats here.</a></p>
 					<h4>Brad Pitt</h4>
-					<p></p>
+					<p>In 2006, Pitt traveled to Haiti along with Angelina Jolie, to visit a school supported by the Haiti-born musician and rapper, Wyclef Jean's Yéle Haiti Foundation. The actor assisted the charity by aiding projects focused on conserving the environment, improving health facilities, spreading community development, and working for better education in Haiti through media, sports, and music.</p>
+					<p>"You hear so much just about the danger and the fear and then you come here and you meet just an amazing people," Jolie, a goodwill ambassador for the United Nations, had said at the time. "Given just a little chance, and given a little help, this is going to be a great country."</p>
+					<p>When Brad Pitt visited New Orleans’ Lower 9th Ward in 2007, two years after Hurricane Katrina, he was shocked by the "lack of rebuilding progress in this historic, working class community." Pitt took the initiative to help rebuild the hardest hit area of the city.</p>
+					<p>He embarked on a mission to build 150 green homes, and started the Make It Right foundation the same year to ensure all the homes built for the displaced Katrina victims met the highest standards of green building. </p>
 				</div>
 			</div>
 			<div class = "People">
@@ -232,10 +235,19 @@
 			<div id = "left">
 				<div id = "padding">
 					<h4>Leonardo DiCaprio</h4>
-					<p>A change in global or regional climate patterns, in particular a change apparent from the mid to late 20th century onwards and attributed largely to the increased levels of atmospheric carbon dioxide produced by the use of fossil fuels.</p>
-					<p><br>That's the basic definition. But what <i>is</i> it and why should we fear it?</p>
-					<p><br>The planet's climate has constantly been changing over geological time. The global average temperature today is about 15C, though geological evidence suggests it has been much higher and lower in the past.<br>However, the current period of warming is occurring more rapidly than many past events. Scientists are concerned that the natural fluctuation, or variability, is being overtaken by a rapid human-induced warming that has serious implications for the stability of the planet's climate.<br><br><br><br></p>
-				</div>
+					<p>In 1998, the Leonardo DiCaprio Foundation was established in order to address pressing environmental and humanitarian issues. Through grant making, campaigning and media projects, the organization has addressed an exceptional variety of issues: protecting tigers from extinction, saving rainforests, protecting oceans, saving sharks, protecting Antarctica and helping people gain access to clean water<br><br>The Leonardo DiCaprio Foundation donated $1 million to the Elephant Crisis Fund to assist anti-poaching efforts.<br><br>Leo's foundation provided Oceana with a $3 million grant. Oceana was founded in 2001 and is the largest international organization focused solely on ocean conservation.<br><br>He founded an electric car racing team. Thus, it seems he might set a new precedent for the way people race cars, making the activity much friendlier to the environment.<br><br>"The 11th Hour" is a documentary film created, produced and narrated by Leonardo DiCaprio. It provides an intimate look at the state of the global environment and the way in which we can institute practical measures to improve its health.</p>
+					<h4>Mark Ruffalo</h4>
+					<p>As a boy in 1970s Kenosha, Wisconsin, Mark had a passionate love of nature. At the time, Mark and his friends formed a little group called, <i><b>“The Foresters”</b></i> "…our dream was to…protect the forests. This power plant was [in Kenosha] and I started to notice…how it degraded the vibrancy of the life there. I think that was probably where my environmentalism started."</p>
+					<p>Mark formed made <b><i>The Solution Project</i></b>. The Solutions Project is exactly that – a platform for creating plan-based solutions for the entire US. Their plans for all 50 states include: </p>
+					<ul>
+						<li>Take each state to 100% renewable energy by 2050, based on the technology available today.</li>
+						<li>Creating millions of jobs</li>
+						<li>Saving 250,000 lives per year by reducing fossil fuel pollution-related deaths.</li>
+						<li>Saving the country millions (potentially trillions) in healthcare costs by mitigating pollution.</li>
+					</ul>
+	`				<p>One of the organization’s goals is to create viable plans that acknowledge not everyone is a “tree-hugger,” meaning global solutions need to make good business sense.</p>
+					<p>Mark points out we need a second industrial revolution to clean up the mess of the first, and the unbelievable reality that in the decades of theorizing and talking about it – nobody has broken out with a realistic, do-able, real-life plan – until now.</p>
+					</div>
 			</div>
 			<div class="footer">
 				<p>Posted by: Pádraig Whyte and James Joyce</p>
