--- a/Climate Change Webpage/News.html
+++ b/Climate Change Webpage/News.html
@@ -148,6 +148,19 @@
 				height:auto;
 				
 			}
+			.news-right {
+				position: absolute;
+				width: 30%;
+				height: auto;
+				right: 1%;
+			}
+			.news-right2 {
+				position: absolute;
+				width: 30%;
+				height: auto;
+				right: 1%;
+				top: 940px;
+			}
 			
 		</style>
 	</head>
@@ -197,6 +210,9 @@
 					<h4>Headlines</h4>
 					<img class="news-left" src = "viewpoints.jpg">
 					<img class="news-left2" src = "tippoint.jpg">
+					<img class = "news-right" src = "NewsB.jpg">
+					<img class = "news-right2" src = "FClimate.jpg">
+
 				</div>
 			</div>
 			
