--- a/Climate Change Webpage/News.html
+++ b/Climate Change Webpage/News.html
@@ -161,7 +161,13 @@
 				right: 1%;
 				top: 940px;
 			}
-			
+			.news-right3 {
+				position: absolute;
+				width: 30%;
+				height: auto;
+				right: 1%;
+				top: 1200px;
+			}
 		</style>
 	</head>
 	<body>
@@ -193,6 +199,7 @@
 					<img class="news-left2" src = "tippoint.jpg">
 					<img class = "news-right" src = "NewsB.jpg">
 					<img class = "news-right2" src = "FClimate.jpg">
+					<img class = "news-right3" src = "MoreNews.jpg">
 
 				</div>
 			</div>
